<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="362dp"
        android:layout_height="112dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="#56A359"
            android:text="@string/boquer"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="Registrate con nosotros"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="363dp"
        android:layout_height="304dp"
        android:background="#E0E0E0"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284">

        <EditText
            android:id="@+id/registerId"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/border_solid_bottom"
            android:backgroundTint="#8056A259"
            android:ems="10"
            android:hint="@string/documento"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/registerUser"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/registerLast"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:cursorVisible="false"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:selectAllOnFocus="false"
            android:textColor="#99000000"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/registerPass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/clave"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.619">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#56A359"
            android:paddingTop="5dp"
            android:text="Registrarse"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.826">

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:text="Ya Tienes Cuenta?"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/registerLoginBtn"
            android:layout_width="136dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:backgroundTint="#E0E0E0"
            android:text="Ingresa Aqui."
            android:textColor="#56A259" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>