<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/atras1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="#56A259"
            app:srcCompat="?attr/actionModeCloseDrawable" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="389dp"
        android:layout_height="58dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101">

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="Agrega un Libro"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="358dp"
        android:layout_height="409dp"
        android:background="#E0E0E0"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="117dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="182dp"
                    android:layout_height="117dp"
                    android:layout_margin="5dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />
            </LinearLayout>

            <Button
                android:id="@+id/button10"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="#56A159"
                android:text="@string/agg"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/codeBook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/cd"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/nameBook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/border_solid_bottom"
            android:backgroundTint="#8056A259"
            android:ems="10"
            android:hint="@string/nlb"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/authorBoot"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/aut"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/dateBook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/fh_public"
            android:inputType="date"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/obsBook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:cursorVisible="false"
            android:ems="10"
            android:hint="@string/obs"
            android:inputType="textLongMessage"
            android:paddingLeft="5dp"
            android:selectAllOnFocus="false"
            android:textColor="#99000000"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/priceBook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="179dp"
        android:layout_height="135dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/addBookBtn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="30sp"
            android:background="#56A259"
            android:text="AGREGAR"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancelBookBtn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10sp"
            android:background="#56A259"
            android:text="Cancelar"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>