<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/atras21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="#56A259"
            app:srcCompat="?attr/actionModeCloseDrawable" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="389dp"
        android:layout_height="58dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108">

        <TextView
            android:id="@+id/textView40"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="Desear Eliminar Algun Libro"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="341dp"
        android:layout_height="325dp"
        android:background="#E0E0E0"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/codeFind"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_solid_bottom"
                android:ems="10"
                android:hint="Codigo"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <Button
                android:id="@+id/findBtn"
                android:layout_width="99dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="0"
                android:background="@drawable/btnredondowhite"
                android:text="Buscar"
                android:textColor="#539B56" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="117dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_agg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nameFind"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/border_solid_bottom"
                    android:ems="10"
                    android:hint="@string/nlb"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp" />

                <EditText
                    android:id="@+id/authorFind"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/border_solid_bottom"
                    android:ems="10"
                    android:hint="@string/aut"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/dateFind"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/fh_public"
            android:inputType="date"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/obsFind"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:cursorVisible="false"
            android:ems="10"
            android:hint="@string/obs"
            android:inputType="textLongMessage"
            android:paddingLeft="5dp"
            android:selectAllOnFocus="false"
            android:textColor="#99000000"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/priceFind"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_solid_bottom"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="142dp"
        android:layout_height="127dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="141dp"
            android:layout_height="35dp"
            android:background="#56A259"
            android:text="Eliminar"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancelDeleteBtn"
            android:layout_width="141dp"
            android:layout_height="35dp"
            android:layout_marginTop="30sp"
            android:background="#56A259"
            android:text="Cancelar"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>